--- a/app/templates/includes/nav.html
+++ b/app/templates/includes/nav.html
@@ -89,7 +89,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Nevermind</button>
-                                        <a href="{{ url_for('auth.logout') }}" class="btn btn-primary">Confirm
+                                        <a href="{{ url_for('auth.logout') }}" class="btn btn-danger" id="no-hov">Confirm
                                             Logout</a>
                                     </div>
                                 </div>
