--- a/app/static/styles/alerts.css
+++ b/app/static/styles/alerts.css
@@ -92,3 +92,17 @@ a:hover {
     box-shadow: rgb(217, 227, 237) 0px 20px 30px -10px;
 
 }
+.btn {
+    color: whitesmoke;
+    margin: 1px;
+    padding: 12px 24px!important;
+    background-color:#526175;
+    margin: 1px 5px;
+    transition: background-color 0.5s ease;
+    
+}
+.btn:hover {
+    background-color: #8aa3a5;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+   
+}
