--- a/app/static/styles/set_alerts.css
+++ b/app/static/styles/set_alerts.css
@@ -13,13 +13,13 @@ body {
     min-height: 100vh;
 }
 
-form,h2,h1,h3 {
+form,h1,h3 {
     color:whitesmoke;
     margin:20px;
 }
 
 h2{
-    color:whitesmoke;
+    
     text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 h5 {
