--- a/app/static/styles/nav.css
+++ b/app/static/styles/nav.css
@@ -73,3 +73,11 @@ a#no-hov:hover:after {
 .logoutModalLabel {
     color:#1f1f1f;
 }
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-toggler {
+    border: 1px solid whitesmoke;
+}
