--- a/app/templates/includes/nav.html
+++ b/app/templates/includes/nav.html
@@ -100,6 +100,9 @@
                 {% else %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('main.home') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ url_for('auth.login') }}">Login</a>
                     </li>
                     <li class="nav-item">
