fixed flash message and logout user on auth routes

--- a/app/static/styles/reset_password.css
+++ b/app/static/styles/reset_password.css
@@ -5,15 +5,10 @@
     overflow: hidden;
 }
 
-.reset_password_body {
-    background: linear-gradient(to bottom, #1f242d, #1f242d, #1a1b1f, #121212);
-    font-family: 'Exo', sans-serif;
-    margin: 0; 
-    overflow: visible; 
-    min-height: 100vh;
-}
+
 
 .reset_password_p {
+    border-radius: 10px;
     color:whitesmoke;
     margin:20px;
 }
@@ -69,9 +64,7 @@ h1 {
     text-align: center;
 }
 
-p {
-    color:whitesmoke;
-}
+
 
 input[type="email"], input[type="submit"] {
     width: 100%;
@@ -80,11 +73,7 @@ input[type="email"], input[type="submit"] {
     box-sizing: border-box;
 }
 
-input[type="submit"] {
-    background-color: #8aa3a5;
-    color: whitesmoke;
-    border: none;
-}
+
 
 @media screen and (max-width: 600px) {
     form {
