additional styling for password reset form

--- a/app/static/styles/reset_password.css
+++ b/app/static/styles/reset_password.css
@@ -2,10 +2,7 @@
     background: linear-gradient(to bottom, #1f242d, #1f242d, #1a1b1f, #121212);
     min-height: 100vh;
     font-family: 'Exo', sans-serif;
-    overflow: hidden;
 }
-
-
 
 .reset_password_p {
     border-radius: 10px;
@@ -42,29 +39,25 @@
 .reset_password_h1 {
     animation: fadeIn 2s;
 }
+
 body {
     background: linear-gradient(to bottom, #1f242d, #1f242d, #1a1b1f, #121212);
     font-family: 'Exo', sans-serif;
     margin: 0; 
-    overflow: visible; 
     min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 form {
     background-color: #526175;
     padding: 20px;
+    margin: 20px auto;
     border-radius: 8px;
 }
 
-h1 {
+h1, h6 {
     color:whitesmoke;
     text-align: center;
 }
-
-
 
 input[type="email"], input[type="submit"] {
     width: 100%;
@@ -72,8 +65,6 @@ input[type="email"], input[type="submit"] {
     margin: 8px 0;
     box-sizing: border-box;
 }
-
-
 
 @media screen and (max-width: 600px) {
     form {
