changed gaming list table to be mobile responsive

--- a/app/static/styles/lists.css
+++ b/app/static/styles/lists.css
@@ -58,3 +58,15 @@ table {
     background-color: #8aa3a5;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
+
+@media (max-width: 992px) {
+    .table-responsive {
+        width: 100%;
+        margin-top: 0.75em;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+    .table-responsive > .table-bordered {
+        border: 0;
+    }
+}
