fix login & reset password links + mobile display

--- a/app/static/styles/reset_password.css
+++ b/app/static/styles/reset_password.css
@@ -1,7 +1,22 @@
 .reset_password_background {
-    background: linear-gradient(to bottom, #1f242d, #1f242d, #1a1b1f, #121212);
-    min-height: 100vh;
-    font-family: 'Exo', sans-serif;
+    background: linear-gradient(to bottom, #252b33, #22272f, #22272f, #252b33);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 100px auto 0 auto;
+    width: 90%; /* Use a percentage for width */
+    max-width: 500px; /* Set a max-width for larger screens */
+    padding: 50px;
+    border-radius: 10px;
+    box-shadow: rgb(217, 227, 237) 0px 20px 30px -10px;
+}
+
+@media screen and (max-width: 768px) {
+    .reset_password_background {
+        width: 95%; /* Allow the form to take more width on smaller screens */
+        padding: 25px; /* Reduce padding on smaller screens */
+        margin-top: 50px; /* Reduce the top margin on smaller screens */
+    }
 }
 
 .reset_password_p {
@@ -20,7 +35,7 @@
     color: whitesmoke;
     margin: 1px;
     padding: 12px 24px!important;
-    background-color:#526175;
+    background-color:#252b33;
     margin: 1px 5px;
     transition: background-color 0.5s ease;  
 }
@@ -28,7 +43,7 @@
 .reset_password_btn:hover {
     background-color: #8aa3a5;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 @keyframes fadeIn {
@@ -71,4 +86,31 @@ input[type="email"], input[type="submit"] {
         width: 100%;
         padding: 10px;
     }
+}
+
+
+.reset_password_body {
+    /* Your existing styles for body */
+    margin: 0 auto; /* Center the body horizontally */
+    padding: 1rem; /* Add padding around the body */
+    max-width: 500px; /* Set a max-width for larger screens */
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    .reset_password_body {
+        margin: 1rem; /* Add margin to the sides on smaller screens */
+    }
+}
+
+.reset_password_p {
+    /* Your existing styles for paragraph */
+    margin-bottom: 1rem; /* Add space below the paragraph */
+}
+
+.btn.reset_password_btn {
+    /* Your existing styles for button */
+    display: block; /* Make the button a block element */
+    width: 100%; /* Set the button width to 100% */
+    margin-top: 1rem; /* Add space above the button */
 }
