--- a/app/static/styles/login.css
+++ b/app/static/styles/login.css
@@ -89,3 +89,9 @@ h5 {
         padding: 6px 12px!important;
     }
 }
+
+#resetPassword, a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
