--- a/app/templates/includes/nav.html
+++ b/app/templates/includes/nav.html
@@ -117,19 +117,39 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
-            $("#viewCategoriesDropdown").click(function (event) {
+            // Toggle dropdown menus
+            $("#viewCategoriesDropdown, #viewAlertsDropdown, #viewProfileDropdown").click(function (event) {
                 event.preventDefault();
-                $("#categoriesDropdownMenu").toggleClass("d-none");
+                event.stopPropagation(); // Stop the click from closing the dropdown immediately
+                var $dropdownMenu = $(this).next('.dropdown-menu');
+                $('.dropdown-menu').not($dropdownMenu).addClass('d-none'); // Hide other dropdowns
+                $dropdownMenu.toggleClass('d-none'); // Toggle the clicked dropdown
             });
-
-            $("#viewAlertsDropdown").click(function (event) {
-                event.preventDefault();
-                $("#alertsDropdownMenu").toggleClass("d-none");
+    
+            // Collapse the navbar or dropdowns when a dropdown item is clicked
+            $('.navbar-nav .dropdown-item').on('click', function(){
+                // Check if the navbar-toggler is visible (mobile view)
+                if ($('.navbar-toggler').is(':visible')) {
+                    $('.navbar-collapse').collapse('hide');
+                } else {
+                    // Hide the open dropdown menus (desktop view)
+                    $('.dropdown-menu').addClass('d-none');
+                }
             });
-
-            $("#viewProfileDropdown").click(function (event) {
-                event.preventDefault();
-                $("#profileDropdownMenu").toggleClass("d-none");
+    
+            // Hide dropdown menus when clicking outside
+            $(document).click(function (event) {
+                var clickover = $(event.target);
+                var _opened = $(".navbar-collapse").hasClass("show");
+                if (_opened === true && !clickover.hasClass("navbar-toggler")) {
+                    $(".navbar-toggler").click();
+                }
+    
+                // Check if the click is outside the dropdown
+                if (!clickover.closest('.nav-item.dropdown').length) {
+                    // Hide all dropdown menus
+                    $('.dropdown-menu').addClass('d-none');
+                }
             });
         });
     </script>
