--- a/app/static/styles/set_alerts.css
+++ b/app/static/styles/set_alerts.css
@@ -38,6 +38,7 @@ h5 {
     padding: 12px 24px!important;
     background-color:#526175;
 }
+
 .btn:hover {
     background-color: #8aa3a5;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
@@ -53,20 +54,28 @@ h5 {
     box-shadow: 0 0 0 0.2rem #8aa3a5;
 }
 
-.container{
-    background: linear-gradient(to bottom,  #252b33, #22272f,  #22272f,  #252b33);
+.container {
+    background: linear-gradient(to bottom, #252b33, #22272f, #22272f, #252b33);
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 60px;
     margin-bottom: 50px;
-    
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#768497", endColorstr="#5F6F85", GradientType=1 );
-    width: 40%;
     padding: 50px;
     border-radius: 10px;
     box-shadow: rgb(217, 227, 237) 0px 20px 30px -10px;
+    width: 90%; 
+    max-width: 500px; 
+    margin: 60px auto; 
+}
 
+/* Media Queries for smaller screens */
+@media (max-width: 768px) {
+    .container {
+        width: 95%; 
+        margin-top: 30px; 
+        padding: 20px; 
+    }
 }
 
 #emailHelp {
