--- a/app/static/styles/update_alert.css
+++ b/app/static/styles/update_alert.css
@@ -13,81 +13,25 @@ body {
     min-height: 100vh;
 }
 
-/* form {
-    color:whitesmoke;
-    margin:20px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-} */
-/* h1 {
-    color:whitesmoke;
-    margin:20px;
-} */
-/* h3 {
-    color:black;
-    margin:20px;
-} */
-/* h2{
-    color:whitesmoke;
-    text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    margin:20px;
-}
-h5 {
-    font-weight: 100;
-    color:whitesmoke;
-    text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-} */
-
 #coin-name{
     font-weight: 400;
 }
 
-/* .btn {
-    color: whitesmoke;
-    margin: 1px;
-    padding: 12px 24px!important;
-    background-color:#526175;
-} */
 .btn {
     color: whitesmoke;
     padding: 12px 24px!important;
     background-color: #526175;
-    display: inline-block; /* Ensure the button is not set to display: none */
-    visibility: visible; /* Ensure the button is not hidden */
-    opacity: 1; /* Ensure the button is fully opaque */
-    z-index: 10; /* Ensure the button is above other elements */
-    /* Other styles */
+    display: inline-block; 
+    visibility: visible; 
+    opacity: 1; 
+    z-index: 10; 
+    
 }
 
 .btn:hover {
     background-color: #8aa3a5;
-    /* Other hover styles */
 }
 
-/* .form-control{
-    background-color: #ccd8d8;
-}
-
-.form-control:focus {
-    border-color: #8aa3a5;
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem #8aa3a5;
-} */
-
-/* .container{
-    background: linear-gradient(to bottom,  #252b33, #22272f,  #22272f,  #252b33);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-    
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#768497", endColorstr="#5F6F85", GradientType=1 );
-    width: 40%;
-    padding: 50px;
-    border-radius: 10px;
-    box-shadow: rgb(217, 227, 237) 0px 20px 30px -10px;
-} */
-
-/* Container */
 .container {
     background: linear-gradient(to bottom, #252b33, #22272f);
     display: flex;
@@ -96,19 +40,15 @@ h5 {
     padding: 50px;
     border-radius: 10px;
     box-shadow: rgb(217, 227, 237) 0px 20px 30px -10px;
-    width: 40%; /* Keep your original width */
-    margin: 50px auto; /* Center the container */
+    width: 40%; 
+    margin: 50px auto; 
 }
 
 #emailHelp {
     margin-bottom: 20px;
     color:whitesmoke;
 }
-/* .card-title, .card-text {
-    font-weight: 100;
-    color:whitesmoke;
-    text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-} */
+
 
 /* Typography */
 h1, h2, h3, h5, .card-title, .card-text {
@@ -116,12 +56,9 @@ h1, h2, h3, h5, .card-title, .card-text {
     text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-/* background-color: var(--color-header-bg);
-    background-image: linear-gradient(to bottom, #1f242d, #1f242d, #1a1b1f, #121212); */
-
 /* Form and Controls */
 form, .form-control {
-    margin-bottom: 15px; /* Space between form elements */
+    margin-bottom: 15px; 
 }
 
 .form-control:focus {
@@ -132,16 +69,30 @@ form, .form-control {
 
 @media (max-width: 768px) {
     .container {
-        width: 95%; /* Increase width on smaller screens */
-        padding: 20px; /* Reduce padding on smaller screens */
+        width: 95%; 
+        padding: 20px; 
     }
 
     h1, h2, h3, h5, .card-title, .card-text {
-        font-size: 4vw; /* Adjust font size for smaller screens */
+        font-size: 4vw; 
     }
 
     form, .form-control, .btn {
-        width: 100%; /* Full width for better mobile experience */
+        width: 100%; 
     }
 
+}
+
+.modal-title {
+    font-size: 1.5rem; 
+    color: #050000; 
+    text-align: center; 
+    
+}
+
+.btn-close {
+    background: none; 
+    border: none; 
+    opacity: 1; 
+    
 }
