--- a/app/static/styles/profile.css
+++ b/app/static/styles/profile.css
@@ -4,6 +4,7 @@
     --text-color: whitesmoke;
     --button-bg: #526175;
     --button-hover-bg: #8aa3a5;
+    --button-focus-outline: 2px solid #ffffff;
     --margin-standard: 20px;
 }
 
@@ -38,12 +39,17 @@ h1 {
     background-color: var(--button-bg);
     margin: 1px 5px;
     transition: background-color 0.5s ease;
+    outline: none; /* Remove default focus outline */
 }
 
 .btn:hover {
     background-color: var(--button-hover-bg);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     transform: scale(1.1);
+}
+
+.btn:focus {
+    box-shadow: 0 0 0 var(--button-focus-outline);
 }
 
 @keyframes fadeIn {
