--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     {% block styles %} {% endblock %}
     <title>{% block title %} {% endblock %}</title>
-    <link rel="website icon" type="png" href="./static/images/cropediconmain.png">
+    <link rel="icon" type="image/png" href="/static/images/cropediconmain.png">
 </head>
 
 <body>
