--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -85,7 +85,10 @@ a:hover {
 .btn:hover {
     background-color: #8aa3a5;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    
+    transform: scale(1.1);
+}
+.btn:focus {
+    box-shadow: 0 0 0 var(--button-focus-outline);
 }
 p{
     color:whitesmoke;
