--- a/app/static/styles/alerts.css
+++ b/app/static/styles/alerts.css
@@ -91,7 +91,7 @@ a:hover {
     background-color: #ccd8d8;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     box-shadow: rgb(217, 227, 237) 0px 20px 30px -10px;
-
+    transform: scale(1.05);
 }
 .btn {
     color: whitesmoke;
