--- a/app/static/styles/lists.css
+++ b/app/static/styles/lists.css
@@ -14,6 +14,7 @@ body, html {
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    cursor: pointer;
 }
 
 #plus:after {
@@ -24,7 +25,7 @@ body, html {
     background-color: #ccd8d8;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     box-shadow: rgb(217, 227, 237) 0px 10px 15px -5px;
-
+    transform: scale(1.05);
 }
 
 .background {
@@ -57,6 +58,7 @@ table {
 .btn:hover {
     background-color: #8aa3a5;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    transform: scale(1.05);
 }
 
 @media (max-width: 992px) {
