--- a/app/static/styles/login.css
+++ b/app/static/styles/login.css
@@ -96,3 +96,12 @@ h5 {
     flex-direction: column;
     align-items: center;
 }
+
+input:invalid {
+    border-color: crimson;
+}
+
+input:valid {
+    border-color: aquamarine;
+}
+
