update reset_password form and style

--- a/app/static/styles/reset_password.css
+++ b/app/static/styles/reset_password.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     align-items: center;
     margin: 100px auto 0 auto;
-    width: 90%; /* Use a percentage for width */
-    max-width: 500px; /* Set a max-width for larger screens */
+    width: 90%; 
+    max-width: 500px; 
     padding: 50px;
     border-radius: 10px;
     box-shadow: rgb(217, 227, 237) 0px 20px 30px -10px;
@@ -13,9 +13,9 @@
 
 @media screen and (max-width: 768px) {
     .reset_password_background {
-        width: 95%; /* Allow the form to take more width on smaller screens */
-        padding: 25px; /* Reduce padding on smaller screens */
-        margin-top: 50px; /* Reduce the top margin on smaller screens */
+        width: 95%; 
+        padding: 25px; 
+        margin-top: 50px; 
     }
 }
 
@@ -90,27 +90,27 @@ input[type="email"], input[type="submit"] {
 
 
 .reset_password_body {
-    /* Your existing styles for body */
-    margin: 0 auto; /* Center the body horizontally */
-    padding: 1rem; /* Add padding around the body */
-    max-width: 500px; /* Set a max-width for larger screens */
+    
+    margin: 0 auto; 
+    padding: 1rem; 
+    max-width: 500px; 
 }
 
-/* Media query for smaller screens */
+
 @media (max-width: 768px) {
     .reset_password_body {
-        margin: 1rem; /* Add margin to the sides on smaller screens */
+        margin: 1rem; 
     }
 }
 
 .reset_password_p {
-    /* Your existing styles for paragraph */
-    margin-bottom: 1rem; /* Add space below the paragraph */
+    
+    margin-bottom: 1rem; 
 }
 
 .btn.reset_password_btn {
-    /* Your existing styles for button */
-    display: block; /* Make the button a block element */
-    width: 100%; /* Set the button width to 100% */
-    margin-top: 1rem; /* Add space above the button */
+    
+    display: block; 
+    width: 100%; 
+    margin-top: 1rem; 
 }
