update valid/invalid display

--- a/app/static/styles/reset_password.css
+++ b/app/static/styles/reset_password.css
@@ -114,3 +114,22 @@ input[type="email"], input[type="submit"] {
     width: 100%; 
     margin-top: 1rem; 
 }
+
+input:invalid {
+    border-color: crimson;
+}
+
+input:valid {
+    border-color: aquamarine;
+}
+
+label {
+    display: block;
+    padding-left: 1rem;
+    &:has(+ input:user-invalid):after {
+        content: "❌";
+    }
+    &:has(+ input:user-valid):after {
+        content: "✅";
+    }
+}
